[package]
name = "litir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
minreq = { version = "2.3.0", features = ["https-rustls", "json-using-serde"] }
clap = { version = "3.0.0", features = ["derive"] }
tide = { version = "*" }
async-std = { version = "*", features = ["attributes"] }
tempfile = "*"
handlebars = { version = "*", features = ["dir_source"] }
tide-handlebars = "*"
surf = "*"
sqlx = { version = "*", features = [ "runtime-async-std-native-tls", "postgres", "sqlite" ] }
openssl = { version = "*" }
http-types = { version = "*" }
uuid = { version = "*", features = [ "v4" ]}
chrono = { version = "*" }


